--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -87,9 +87,9 @@
                     <label>Select dance style or school</label>
                 <select class="option_btw_style_school" name="dance_style">
                     <option value="">select below</option>
-                    <option value="Dance style">Style</option>
+                    <option value="Dance style">Dance Style</option>
                     <option value="Dance school">Dance School</option>
-                 
+                    <option value="Dance teacher">Dance Teacher</option>
                 </select>
 
                 <button type="button" class="search-btn" id="search-btn">Search</button>
