--- a/templates/dance_schools.html
+++ b/templates/dance_schools.html
@@ -37,8 +37,12 @@
         <div id="map"></div>
     </section>
 
+    <section class="add_school"></section>
+    <h6>Want your school here?</h6>
+    <button type="button" id="add_school">Add School</button>
+   
 
-
+           
 
 </main>
 
@@ -46,7 +50,10 @@
 
 <script src="static/map.js" charset="utf8"></script>
 
+
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCi7U3Bs7RTVtksiP6UEgzyFzXZIuohYEo&callback=initMap" async
     defer></script>
-    
+
+<script src="static/dance_schools.js" charset="utf8"></script>
+   
 {% endblock %}
