--- a/templates/dance_class.html
+++ b/templates/dance_class.html
@@ -4,7 +4,7 @@
 {% block head %}
 {{ super() }}
 
-<link rel="stylesheet" type="text/css" href="/static/style_search.css">
+<link rel="stylesheet" type="text/css" href="/static/css/style_search.css">
 
 {% endblock %}
 
