--- a/templates/dance_school.html
+++ b/templates/dance_school.html
@@ -4,7 +4,7 @@
 {% block head %}
 {{ super() }}
 
-<link rel="stylesheet" type="text/css" href="/static/style_search.css">
+<link rel="stylesheet" type="text/css" href="/static/css/style_search.css">
 
 
 {% endblock %}
@@ -17,7 +17,7 @@
 <h4>school: {{ dance_school.name }}</h4>
 </br>
 <h5>address: {{ dance_school.address }}</h5>
-<h5>website: <a href="{{ dance_school.website }}/"></a></h5>
+<h5>website: <a href="https://{{ dance_school.website }}">{{dance_school.website }}</a></h5>
 
 <!-- <h5>website: <a href="https://www.{{ dance_school.website }}"></a></h5>   -->
 <h5>phone: {{ dance_school.phone }}</h5>
@@ -34,5 +34,5 @@
 
 </main>
 
-<script src="/static/dance_school.js" charset="utf8"></script>
+<script src="/static/js/dance_school.js" charset="utf8"></script>
 {% endblock %}
