--- a/templates/dance_style.html
+++ b/templates/dance_style.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
-{% block title %}Dance search | Dance Search Engine in San Francisco{% endblock %}
+{% block title %}Dance classes | Dance Search Engine in San Francisco{% endblock %}
 
 {% block head %}
 {{ super() }}
 
-<link rel="stylesheet" type="text/css" href="/static/style_search.css">
+<link rel="stylesheet" type="text/css" href="/static/css/dance_style.css">
 
 {% endblock %}
 
@@ -13,31 +13,60 @@
 
 {% block content %}
 
-<h4>All {{ dance_style.name }} classes</h4>
-</br>
-<div>
-    {% for class in dance_classes %}
-    <h5>class: <a href="/dance_class/{{ class.class_id }}">{{ class.name }}</a></h5>
-    <h5>when: {{ class.schedule }}</h5>
-    <h5> at: <a href="/dance_school/{{ class.school_id }}">{{ class.school.name }}</a></h5>
-    <h5> tought by: <a href="/dance_teacher/{{ class.teacher_id }}">{{ class.teacher.teacher_name }}</a></h5>
-    
-</br>
-    {% endfor %}
-    <div>
+<div class="row">
+    <div class="col-12">
+
+        <h2>{{ dance_style.name }} classes</h2>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+
+</div>
+<div class="row">
+    <div class="col-1">
+    </div>
+
+    <div class="col-10">
+        <table class="classes-table">
+            <tr>
+                <th>class</th>
+                <th>when</th>
+                <th>where</th>
+                <th>teacher</th>
+            </tr>
+
+
+            {% for class in dance_classes %}
+
+            <tr>
+                <td><a href="/dance_class/{{ class.class_id }}">{{ class.name }}</a></td>
+                <td>{{ class.schedule }}</td>
+                <td><a href="/dance_school/{{ class.school_id }}">{{ class.school.name }}</a></td>
+                <td><a href="/dance_teachers/{{ class.teacher_id }}">{{ class.teacher.teacher_name }}</a></td>
+            </tr>
+
+            {% endfor %}
+
+
+        </table>
+
+    </div>
+
+    <div class="col-1">
+    </div>
 
 
 
 
+</div>
 
 
 
 
+<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+    crossorigin="anonymous"></script>
 
-
-
-        <script src="https://code.jquery.com/jquery-3.4.1.js"
-            integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-
-        <script src="static/homepage.js" charset="utf8"></script>
-        {% endblock %}
+<script src="static/js/homepage.js" charset="utf8"></script>
+{% endblock %}
